--- a/404.html
+++ b/404.html
@@ -2,30 +2,30 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/school/favicon.png" />
+		<link rel="icon" href="/portfolio-v2/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/school/_app/immutable/entry/start.CM0ohK9F.js">
-		<link rel="modulepreload" href="/school/_app/immutable/chunks/entry.BB41YvCV.js">
-		<link rel="modulepreload" href="/school/_app/immutable/chunks/scheduler.Cz8KL0TK.js">
-		<link rel="modulepreload" href="/school/_app/immutable/chunks/index.Ca2Uraqw.js">
-		<link rel="modulepreload" href="/school/_app/immutable/entry/app.DFAb4rGZ.js">
-		<link rel="modulepreload" href="/school/_app/immutable/chunks/index.Cbq25nTb.js">
+		<link rel="modulepreload" href="/portfolio-v2/_app/immutable/entry/start.DX3wApw-.js">
+		<link rel="modulepreload" href="/portfolio-v2/_app/immutable/chunks/entry.BfZTz0ll.js">
+		<link rel="modulepreload" href="/portfolio-v2/_app/immutable/chunks/scheduler.Cz8KL0TK.js">
+		<link rel="modulepreload" href="/portfolio-v2/_app/immutable/chunks/index.Ca2Uraqw.js">
+		<link rel="modulepreload" href="/portfolio-v2/_app/immutable/entry/app.DgzCEyRV.js">
+		<link rel="modulepreload" href="/portfolio-v2/_app/immutable/chunks/index.Cbq25nTb.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_yx2636 = {
-						base: "/school",
-						assets: "/school"
+					__sveltekit_16l65tk = {
+						base: "/portfolio-v2",
+						assets: "/portfolio-v2"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/school/_app/immutable/entry/start.CM0ohK9F.js"),
-						import("/school/_app/immutable/entry/app.DFAb4rGZ.js")
+						import("/portfolio-v2/_app/immutable/entry/start.DX3wApw-.js"),
+						import("/portfolio-v2/_app/immutable/entry/app.DgzCEyRV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
