--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.yL3LhsnS.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DX3wApw-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BfZTz0ll.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DUVh-yup.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dfn5qlJM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Cz8KL0TK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Ca2Uraqw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DgzCEyRV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.GQUPR4pK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cbq25nTb.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CEf-ZiSw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BE7gw_ZO.js">
@@ -20,9 +20,9 @@
 			
 			<script>
 				{
-					__sveltekit_16l65tk = {
+					__sveltekit_13rzlv6 = {
 						base: new URL(".", location).pathname.slice(0, -1),
-						assets: "/portfolio-v2"
+						assets: "/Ampersand-Alexander.github.io"
 					};
 
 					const element = document.currentScript.parentElement;
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DX3wApw-.js"),
-						import("./_app/immutable/entry/app.DgzCEyRV.js")
+						import("./_app/immutable/entry/start.DUVh-yup.js"),
+						import("./_app/immutable/entry/app.GQUPR4pK.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
