--- a/404.html
+++ b/404.html
@@ -2,30 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/Ampersand-Alexander.github.io/favicon.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/Ampersand-Alexander.github.io/_app/immutable/entry/start.DUVh-yup.js">
-		<link rel="modulepreload" href="/Ampersand-Alexander.github.io/_app/immutable/chunks/entry.Dfn5qlJM.js">
-		<link rel="modulepreload" href="/Ampersand-Alexander.github.io/_app/immutable/chunks/scheduler.Cz8KL0TK.js">
-		<link rel="modulepreload" href="/Ampersand-Alexander.github.io/_app/immutable/chunks/index.Ca2Uraqw.js">
-		<link rel="modulepreload" href="/Ampersand-Alexander.github.io/_app/immutable/entry/app.GQUPR4pK.js">
-		<link rel="modulepreload" href="/Ampersand-Alexander.github.io/_app/immutable/chunks/index.Cbq25nTb.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DTwqnHW_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Bi8rX9rD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.Cz8KL0TK.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.Ca2Uraqw.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BxWwH3T0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cbq25nTb.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_13rzlv6 = {
-						base: "/Ampersand-Alexander.github.io",
-						assets: "/Ampersand-Alexander.github.io"
+					__sveltekit_1ntu32q = {
+						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/Ampersand-Alexander.github.io/_app/immutable/entry/start.DUVh-yup.js"),
-						import("/Ampersand-Alexander.github.io/_app/immutable/entry/app.GQUPR4pK.js")
+						import("/_app/immutable/entry/start.DTwqnHW_.js"),
+						import("/_app/immutable/entry/app.BxWwH3T0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
