--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/2.yL3LhsnS.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DTwqnHW_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bi8rX9rD.js">
+		<link href="./_app/immutable/assets/2.CEA7fU3V.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BvkBWMk4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.j9DTbSvT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Cz8KL0TK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Ca2Uraqw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BxWwH3T0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cbq25nTb.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CEf-ZiSw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BE7gw_ZO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DsGWyE1O.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CJPP-6Ln.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.dcNCQgin.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Bz5Ree27.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">        <svg class="w-full h-full svelte-zdg4kl"><circle cx="0" cy="0" r="30" stroke="#e54274" stroke-width="2" fill-opacity="0"></circle><g transform="translate(0, -16) rotate(45)"><svg class="icon svelte-2vpkwf" width="24" height="24" viewBox="0 0 24 24" fill="none" transform="scale(50)"><path d="M12 4v16m8-8H4" stroke="#e54274" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"></path></svg></g> </svg>  
+		<div style="display: contents">         <svg class="w-full h-full svelte-zdg4kl"><circle cx="0" cy="0" r="30" stroke="#e54274" stroke-width="2" fill-opacity="0"></circle><g transform="translate(0, -16) rotate(45)"><svg class="icon svelte-2vpkwf" width="24" height="24" viewBox="0 0 24 24" fill="none" transform="scale(50)"><path d="M12 4v16m8-8H4" stroke="#e54274" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"></path></svg></g> </svg>  
 			
 			<script>
 				{
-					__sveltekit_1ntu32q = {
+					__sveltekit_lc8ro3 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DTwqnHW_.js"),
-						import("./_app/immutable/entry/app.BxWwH3T0.js")
+						import("./_app/immutable/entry/start.BvkBWMk4.js"),
+						import("./_app/immutable/entry/app.DsGWyE1O.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
